# pretix-guestlist

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
pretix_guestlist/: __init__.py  apps.py  exporters.py  forms.py  models.py  registration_views.py  signals.py  tasks.py  urls.py  views.py
pretix_guestlist/locale/de/LC_MESSAGES/: django.po
pretix_guestlist/locale/en/LC_MESSAGES/: django.po
pretix_guestlist/migrations/: 0001_initial.py  0002_guest_invited_by_dj_guest_status.py  0003_rework_flow.py  0004_alter_guest_guest_token_alter_guest_status_and_more.py  0005_guest_reminder_count_guest_voucher_and_more.py  0006_dj_free_quota.py  0007_alter_guestlistsettings_mail_template.py
pretix_guestlist/static/pretix_guestlist/css/: guestlist.css
pretix_guestlist/templates/pretix_guestlist/: already_registered.html  dashboard.html  dj_delete.html  dj_detail.html  dj_form.html  dj_list.html  guest_register.html  guest_self_add.html  guest_self_add_success.html  register.html  register_full.html  register_success.html  settings.html
pretix_guestlist/tests/: conftest.py  test_forms.py  test_models.py  test_signals.py  test_views.py
